@@ -58,23 +58,23 @@ int main(int argc, char *argv[])
       SPVM_CONSTANT_POOL_SUB constant_pool_sub;
       memcpy(&constant_pool_sub, &compiler->constant_pool->values[sub_id], sizeof(SPVM_CONSTANT_POOL_SUB));
       
-      if (strcmp(sub_abs_name, "std::println_byte") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_byte;
+      if (strcmp(sub_abs_name, "std::say_byte") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_byte;
       }
-      else if (strcmp(sub_abs_name, "std::println_short") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_short;
+      else if (strcmp(sub_abs_name, "std::say_short") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_short;
       }
-      else if (strcmp(sub_abs_name, "std::println_int") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_int;
+      else if (strcmp(sub_abs_name, "std::say_int") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_int;
       }
-      else if (strcmp(sub_abs_name, "std::println_long") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_long;
+      else if (strcmp(sub_abs_name, "std::say_long") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_long;
       }
-      else if (strcmp(sub_abs_name, "std::println_float") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_float;
+      else if (strcmp(sub_abs_name, "std::say_float") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_float;
       }
-      else if (strcmp(sub_abs_name, "std::println_double") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println_double;
+      else if (strcmp(sub_abs_name, "std::say_double") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say_double;
       }
       else if (strcmp(sub_abs_name, "std::print_byte") == 0) {
         constant_pool_sub.native_address = SPVM__std__print_byte;
@@ -94,8 +94,8 @@ int main(int argc, char *argv[])
       else if (strcmp(sub_abs_name, "std::print_double") == 0) {
         constant_pool_sub.native_address = SPVM__std__print_double;
       }
-      else if (strcmp(sub_abs_name, "std::println") == 0) {
-        constant_pool_sub.native_address = SPVM__std__println;
+      else if (strcmp(sub_abs_name, "std::say") == 0) {
+        constant_pool_sub.native_address = SPVM__std__say;
       }
       else if (strcmp(sub_abs_name, "std::sum_int") == 0) {
         constant_pool_sub.native_address = SPVM__std__sum_int;
