@@ -67,7 +67,7 @@ void SPVM__std__print(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%s\n", (char*)string);
 }
 
-void SPVM__std__println(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   SPVM_API_OBJECT* array = args[0].object_value;
@@ -77,7 +77,7 @@ void SPVM__std__println(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%s\n", (char*)string);
 }
 
-void SPVM__std__println_byte(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_byte(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   int8_t value = args[0].byte_value;
@@ -85,7 +85,7 @@ void SPVM__std__println_byte(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%" PRId8 "\n", value);
 }
 
-void SPVM__std__println_short(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_short(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   int16_t value = args[0].short_value;
@@ -93,7 +93,7 @@ void SPVM__std__println_short(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%" PRId16 "\n", value);
 }
 
-void SPVM__std__println_int(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_int(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   int32_t value = args[0].int_value;
@@ -101,7 +101,7 @@ void SPVM__std__println_int(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%" PRId32 "\n", value);
 }
 
-void SPVM__std__println_long(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_long(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   int64_t value = args[0].long_value;
@@ -109,7 +109,7 @@ void SPVM__std__println_long(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%" PRId64 "\n", value);
 }
 
-void SPVM__std__println_float(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_float(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   float value = args[0].float_value;
@@ -117,7 +117,7 @@ void SPVM__std__println_float(SPVM_API* api, SPVM_API_VALUE* args) {
   printf("%f\n", value);
 }
 
-void SPVM__std__println_double(SPVM_API* api, SPVM_API_VALUE* args) {
+void SPVM__std__say_double(SPVM_API* api, SPVM_API_VALUE* args) {
   (void)api;
   
   double value = args[0].double_value;
